refactor: Cars가 List<Car>를 갖도록 수정