@@ -4,6 +4,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
@@ -12,27 +13,27 @@ class CarsTest {
     @Test
     @DisplayName("단독 우승 테스트")
     void getWinner() {
-        Vehicle success = new TestCarSuccess("Success");
-        Vehicle fail = new TestCarFail("Fail");
+        Car success = new TestCarSuccess("Success");
+        Car fail = new TestCarFail("Fail");
         Cars cars = new Cars(Arrays.asList(success, fail));
         cars.moveAll();
-        assertThat(cars.getWinner()).isEqualTo(Arrays.asList(success));
+        assertThat(cars.getWinner()).isEqualTo(List.of(success));
     }
 
     @Test
     @DisplayName("공동 우승 테스트")
     void getWinners() {
-        Vehicle success1 = new TestCarSuccess("Success1");
-        Vehicle success2 = new TestCarSuccess("Success2");
+        Car success1 = new TestCarSuccess("Success1");
+        Car success2 = new TestCarSuccess("Success2");
         Cars cars = new Cars(Arrays.asList(success1, success2));
         cars.moveAll();
-        assertThat(cars.getWinner()).isEqualTo(Arrays.asList(success1, success2));
+        assertThat(cars.getWinner()).isEqualTo(List.of(success1, success2));
     }
 
-    public class TestCarSuccess extends Vehicle {
+    private static class TestCarSuccess extends Car {
 
         public TestCarSuccess(String name) {
-            super(name, 0);
+            super(name);
         }
 
         @Override
@@ -41,10 +42,15 @@ class CarsTest {
         }
     }
 
-    public class TestCarFail extends Vehicle {
+    private static class TestCarFail extends Car {
 
         public TestCarFail(String name) {
-            super(name, 0);
+            super(name);
+        }
+
+        @Override
+        public boolean isMove() {
+            return false;
         }
     }
 }
